# caraspace

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  USER_GUIDE.md  doc.md  docker-entrypoint.sh
.github/workflows/: docs.yml  main.yml  pr.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: changelog.md  contributing.md  releasing.md
docs/src/decorators/: attributes.md  negated.md  overview.md  progressive-refinement.md
docs/src/getting-started/: first-diagram.md  install.md  quickstart.md
docs/src/internals/: architecture.md  compile-time.md  field-types.md  serialization.md
docs/src/workflows/: docker.md  headless.md  library.md
examples/: dbg_basic.rs  demo.rs  demo_auto.rs  demo_macro.rs  demo_simple.rs  enum_equality.rs  enum_singleton_test.rs  enum_test.rs  export_test.rs  force_registration.rs  integration_demo.rs  macro_annotations_demo.rs  python_equivalent_demo.rs  rbt.rs  sequence_test.rs  singleton_test.rs  spytial_annotations_demo.rs  test_discovery.rs  test_recursive.rs  validation_demo.rs
macros/: Cargo.toml
macros/src/: lib.rs
rust-viz-macros/: Cargo.toml
rust-viz-macros/src/: lib.rs
src/: auto_register.rs  export.rs  jsondata.rs  lib.rs  macros.rs  reify.rs  test_serialization.rs
src/cnd_annotations/: mod.rs  runtime.rs
src/spytial_annotations/: mod.rs  runtime.rs  tests.rs  validation.rs
templates/: template.html
tests/: dbg_e2e.rs  decorators.rs  edge_cases_probe.rs  export.rs  recursive_decorators.rs  reify.rs
