[package]
name = "json_data_instance_export"
version = "0.1.0"
edition = "2021"
description = "Rust integration layer for Spytial diagram generation"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sidprasad/caraspace"
keywords = ["rust", "spytial", "visualization", "graph"]
categories = ["visualization", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-value = "0.7"
once_cell = "1.0"
caraspace_export_macros = { path = "./macros" }

[dev-dependencies]
