[package]
name = "caraspace"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Rust integration layer for Spytial diagram generation"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sidprasad/caraspace"
keywords = ["rust", "spytial", "visualization", "graph"]
categories = ["visualization", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"
serde-value = "0.7"
caraspace_export_macros = { path = "./macros" }

[dev-dependencies]
