[package]
name = "caraspace"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
description = "Drop-in replacement for std::dbg! that opens an interactive diagram of Rust values (Spytial for Rust)."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sidprasad/caraspace"
keywords = ["spytial", "visualization", "diagram", "debugging", "graph"]
categories = ["visualization", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"
serde-value = "0.7"
caraspace_export_macros = { version = "0.0.1", path = "./macros" }

[dev-dependencies]
