[package]
name = "caraspace_export_macros"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
description = "Procedural macros for the caraspace crate (SpytialDecorators derive)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sidprasad/caraspace"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
